--- a/.classpath
+++ b/.classpath
@@ -2,6 +2,7 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="/home/milind/Data/Projects/pdfAnvil/lib/itextpdf-5.1.0.jar"/>
+	<classpathentry kind="lib" path="/home/student/Data/Projects/pdfAnvil"/>
+	<classpathentry kind="lib" path="/home/student/Data/Projects/pdfAnvil/lib/itextpdf-5.1.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
